# mediatracker-tauri

./: .gitignore  MOBILE_APP_GUIDE.md  README.md  README.zh.md  index.html  media-collection-2025-12-22.json  media-collection-2026-01-04.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  i18n.ts  index.css  index.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs  models.rs  sync.rs  tests.rs
src/components/: AIConfigPanel.tsx  AddMediaModal.tsx  EditMediaModal.tsx  ImportMediaModal.tsx  Layout.tsx  MediaCard.tsx  Navbar.tsx  PluginManagerModal.tsx  ShareCardModal.tsx  SyncModal.tsx
src/locales/: en.json  zh.json
src/pages/: CollectionPage.tsx  DashboardPage.tsx  LoginPage.tsx  SearchPage.tsx
src/services/: aiService.ts  bangumiService.ts  coverService.ts  importService.ts  pluginService.ts  tmdbService.ts
src/store/: useAIStore.ts  useAuthStore.ts  useCollectionStore.ts  usePluginStore.ts  useSearchStore.ts  useThemeStore.ts
src/types/: plugin.ts  types.ts
