[package]
name = "mediatracker-rust"
version = "0.1.0"
description = "An intelligent media tracking application"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["devtools"] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-dialog = "~2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"], default-features = false }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
quick-xml = "0.31"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
